<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2014 Julio García Muñoz (ZhDev)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name" translatable="false">Human Time</string>
    <string name="about">About</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="title_activity_main">Human Time Settings</string>
    <string name="title_activity_image_cropper">Image resize</string>
    <string name="sample_time" translatable="false">human\ntime</string>
    <string name="background">Background</string>
    <string name="text">Text</string>
    <string name="style">Style</string>
    <string name="shadow">Shadow</string>
    <string name="size">Size</string>
    <string name="position">Position</string>
    <string name="caps">Caps</string>
    <string name="font">Font</string>
    <string name="normal">Normal</string>
    <string name="bold"><b>Bold</b></string>
    <string name="italic"><i>Italic</i></string>
    <string name="bold_italic"><b><i>Bold+Italic</i></b></string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="extra_small">Extra small</string>
    <string name="no_caps">none</string>
    <string name="all_caps">ALL</string>
    <string name="first_cap">First</string>
    <string name="date">Date</string>
    <string name="sample_date">date</string>

    <string-array name="text_caps">
        <item>none</item>
        <item>ALL</item>
        <item>First</item>
    </string-array>

</resources>
